Revision history for App-Report-Generator

0.003
    - Reformatted Changes file as per CPAN::Changes::Spec

0.002   2010-08-15
	- replace test configuration file with a JSON formatted
	  configuration to avoid stupid warnings as described in
	  RT#59973
	- no module code changes

0.001   2010-07-30
    - First version, released on an unsuspecting world.
