@@ -1,6 +1,7 @@
 Revision history for App-Report-Generator
 
 0.003
+    - Added github repo to metadata
     - Reformatted Changes file as per CPAN::Changes::Spec
 
 0.002   2010-08-15
